--- a/v3-nginx/Dockerfile-alpine
+++ b/v3-nginx/Dockerfile-alpine
@@ -139,6 +139,7 @@ ENV ACCESSLOG=/var/log/nginx/access.log \
 
 RUN set -eux; \
     apk add --no-cache \
+        curl \
         curl-dev \
         libfuzzy2 \
         libmaxminddb-dev \
@@ -166,6 +167,7 @@ COPY --from=build /etc/modsecurity.d/modsecurity.conf /etc/modsecurity.d/modsecu
 COPY v3-nginx/templates /etc/nginx/templates/
 COPY src/etc/modsecurity.d/modsecurity-override.conf /etc/nginx/templates/modsecurity.d/modsecurity-override.conf.template
 COPY src/etc/modsecurity.d/setup.conf /etc/nginx/templates/modsecurity.d/setup.conf.template
+COPY src/bin/healthcheck /usr/local/bin/healthcheck
 COPY v3-nginx/docker-entrypoint.d/*.sh /docker-entrypoint.d/
 
 # Comment out the SecDisableBackendCompression option since it is not supported in V3
@@ -179,3 +181,5 @@ RUN set -eux; \
     chmod -R g=u /var/cache/nginx/ /var/log/ /var/run/ /usr/share/nginx/ /etc/nginx/ /etc/modsecurity.d/
 
 WORKDIR /usr/share/nginx/html
+
+HEALTHCHECK CMD /usr/local/bin/healthcheck
