--- a/v2-apache/conf/extra/httpd-modsecurity.conf
+++ b/v2-apache/conf/extra/httpd-modsecurity.conf
@@ -3,11 +3,11 @@ LoadModule security2_module /usr/local/apache2/modules/mod_security2.so
 Timeout ${TIMEOUT}
 
 LogFormat ${APACHE_LOGFORMAT} modsec
+LogFormat ${APACHE_METRICS_LOGFORMAT} metricslog
 
 LogLevel ${LOGLEVEL}
 
-CustomLog ${PERFLOG}
-CustomLog ${METRICSLOG} "env=!nologging"
+CustomLog ${METRICSLOG} metricslog "env=!nologging"
 
 <IfModule reqtimeout_module>
   RequestReadTimeout header=20-40,MinRate=500 body=20,MinRate=500
