--- a/v3-nginx/Dockerfile
+++ b/v3-nginx/Dockerfile
@@ -3,10 +3,7 @@ ARG NGINX_VERSION="1.22.0"
 FROM nginx:${NGINX_VERSION} as build
 
 ARG MODSEC_VERSION=3.0.8 \
-    YAJL_VERSION=2.1.0 \
-    FUZZY_VERSION=2.1.0 \
-    LMDB_VERSION=0.9.29 \
-    SSDEEP_VERSION=2.14.1
+    LMDB_VERSION=0.9.29
 
 # Note: libpcre++-dev (PCRE3) is required by the build description,
 # even though the build will use PCRE2.
@@ -20,12 +17,14 @@ RUN set -eux; \
         g++ \
         git \
         libcurl4-gnutls-dev \
+        libfuzzy-dev \
         libgeoip-dev \
         liblua5.3-dev \
         libpcre++-dev \
         libpcre2-dev \
         libtool \
         libxml2-dev \
+        libyajl-dev \
         make \
         patch \
         pkg-config \
@@ -42,26 +41,11 @@ RUN set -eux; \
     strip /usr/local/lib/liblmdb*.so*
 
 RUN set -eux; \
-    git clone https://github.com/lloyd/yajl --branch ${YAJL_VERSION} --depth 1; \
-    cd yajl; \
-    ./configure; \
-    make install; \
-    strip /usr/local/lib/libyajl*.so*
-
-RUN set -eux; \
-    curl -sSL https://github.com/ssdeep-project/ssdeep/releases/download/release-${SSDEEP_VERSION}/ssdeep-${SSDEEP_VERSION}.tar.gz -o ssdeep-${SSDEEP_VERSION}.tar.gz; \
-    tar -xvzf ssdeep-${SSDEEP_VERSION}.tar.gz; \
-    cd ssdeep-${SSDEEP_VERSION}; \
-    ./configure; \
-    make install; \
-    strip /usr/local/lib/libfuzzy*.so*
-
-RUN set -eux; \
     git clone https://github.com/SpiderLabs/ModSecurity --branch v"${MODSEC_VERSION}" --depth 1 --recursive; \
     cd ModSecurity; \
     curl -sSL https://github.com/SpiderLabs/ModSecurity/pull/2813.patch -o - | patch -p1; \
     ./build.sh; \
-    ./configure --with-yajl=/sources/yajl/build/yajl-${YAJL_VERSION}/ --with-geoip --with-pcre2 --enable-silent-rules; \
+    ./configure --with-yajl --with-ssdeep --with-geoip --with-pcre2 --enable-silent-rules; \
     make install; \
     strip /usr/local/modsecurity/lib/lib*.so*
 
@@ -97,10 +81,7 @@ RUN curl -sSL https://ssl-config.mozilla.org/ffdhe4096.txt -o /usr/share/TLS/dhp
 FROM nginx:${NGINX_VERSION}
 
 ARG MODSEC_VERSION=3.0.8 \
-    YAJL_VERSION=2.1.0 \
-    FUZZY_VERSION=2.1.0 \
-    LMDB_VERSION=0.9.29 \
-    SSDEEP_VERSION=2.14.1
+    LMDB_VERSION=0.9.29
 
 LABEL maintainer="Felipe Zipitria <felipe.zipitria@owasp.org>"
 
@@ -167,8 +148,10 @@ RUN set -eux; \
     LD_LIBRARY_PATH="" apt-get install -y -qq --no-install-recommends --no-install-suggests \
         ca-certificates \
         libcurl4-gnutls-dev \
+        libfuzzy2 \
         liblua5.3 \
         libxml2 \
+        libyajl2 \
         moreutils; \
     rm -rf /var/lib/apt/lists/*; \
     apt-get clean; \
@@ -180,9 +163,7 @@ RUN set -eux; \
     chown -R nginx:nginx /tmp/modsecurity
 
 COPY --from=build /usr/local/modsecurity/lib/libmodsecurity.so.${MODSEC_VERSION} /usr/local/modsecurity/lib/
-COPY --from=build /usr/local/lib/libfuzzy.so.${FUZZY_VERSION} /usr/local/lib/
 COPY --from=build /etc/nginx/modules/ngx_http_modsecurity_module.so /etc/nginx/modules/ngx_http_modsecurity_module.so
-COPY --from=build /usr/local/lib/libyajl.so.${YAJL_VERSION} /usr/local/lib/
 COPY --from=build /usr/local/lib/liblmdb.so /usr/local/lib/
 COPY --from=build /usr/share/TLS/server.key /etc/nginx/conf/server.key
 COPY --from=build /usr/share/TLS/server.crt /etc/nginx/conf/server.crt
@@ -201,9 +182,5 @@ RUN set -eux; \
     ln -s /usr/local/modsecurity/lib/libmodsecurity.so.${MODSEC_VERSION} /usr/local/modsecurity/lib/libmodsecurity.so.3.0; \
     ln -s /usr/local/modsecurity/lib/libmodsecurity.so.${MODSEC_VERSION} /usr/local/modsecurity/lib/libmodsecurity.so.3; \
     ln -s /usr/local/modsecurity/lib/libmodsecurity.so.${MODSEC_VERSION} /usr/local/modsecurity/lib/libmodsecurity.so; \
-    ln -s /usr/local/lib/libfuzzy.so.${FUZZY_VERSION} /usr/local/lib/libfuzzy.so; \
-    ln -s /usr/local/lib/libfuzzy.so.${FUZZY_VERSION} /usr/local/lib/libfuzzy.so.2; \
-    ln -s /usr/local/lib/libyajl.so.${YAJL_VERSION} /usr/local/lib/libyajl.so; \
-    ln -s /usr/local/lib/libyajl.so.${YAJL_VERSION} /usr/local/lib/libyajl.so.2; \
     chgrp -R 0 /var/cache/nginx/ /var/log/ /var/run/ /usr/share/nginx/ /etc/nginx/ /etc/modsecurity.d/; \
     chmod -R g=u /var/cache/nginx/ /var/log/ /var/run/ /usr/share/nginx/ /etc/nginx/ /etc/modsecurity.d/
