--- a/v2-apache/conf/extra/httpd-modsecurity.conf
+++ b/v2-apache/conf/extra/httpd-modsecurity.conf
@@ -2,6 +2,7 @@ LoadModule security2_module /usr/local/apache2/modules/mod_security2.so
 
 Timeout ${TIMEOUT}
 
+# The "common" and "combined" formats are predefined
 LogFormat ${APACHE_LOGFORMAT} modsec
 LogFormat ${APACHE_METRICS_LOGFORMAT} metricslog
 
