--- a/v3-nginx/templates/conf.d/logging.conf.template
+++ b/v3-nginx/templates/conf.d/logging.conf.template
@@ -1,3 +1,4 @@
+# The "combined" log format is predefined
 log_format main '$realip_remote_addr - $remote_user [$time_local] "$request" '
                 '$status $body_bytes_sent "$http_referer" '
                 '"$http_user_agent" "$http_x_forwarded_for"';
